--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h1 class="title is-3 has-text-centered">NTNU IE ToppForsk Group on Embodied AI</h1>
 
   <div class="has-text-centered" style="margin-bottom: 2em;">
-    <img src="assets/img/nn_px4_arch.png" alt="Architecture" style="width: 100%; max-width: 600px; height: auto;">
+    <img src="assets/img/eai-image.png" alt="Architecture" style="width: 100%; max-width: 600px; height: auto;">
   </div>
 
   <h2 class="title is-4">Leadership</h2>
