--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <tr>
       <td><strong>Kostas Alexis</strong></td>
       <td>Professor</td>
-      <td>IE, ITK, Autonomous Robots Lab</td>
+      <td>ITK, IE, Autonomous Robots Lab</td>
     </tr>
   </table>
   
@@ -70,7 +70,7 @@
     Embodied AI is a scientific paradigm that seeks to understand and engineer intelligence as a product of the dynamic interplay between a physical body, its environment, and its computational control and learning systems. Unlike disembodied approaches to AI, Embodied AI emphasizes that intelligence arises through physical interaction with the world—mediated by morphology, perception, control, and learning—and must be studied and designed as an integrated whole.
   </p>
 
-  <div class="section">
+  <div class="section has-text-centered">
     <span class="link-block">
       <a href="https://www.autonomousrobotslab.com/" class="button is-link is-rounded">ARL</a>
     </span>
@@ -84,6 +84,7 @@
       <a href="https://www.ntnu.edu/smallsat" class="button is-danger is-rounded">SmallSat Lab</a>
     </span>
   </div>
+  
 
   <h2 class="title is-4">Video Playlist</h2>
   <div class="has-text-centered">
