--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <div class="section has-text-centered">
     <span class="link-block">
-      <a href="https://www.autonomousrobotslab.com/" class="button is-link is-rounded">ARL</a>
+      <a href="https://www.autonomousrobotslab.com/" class="button is-link is-rounded">Autonomous Robots Lab</a>
     </span>
     <span class="link-block">
       <a href="https://www.itk.ntnu.no/english/lab/unmanned" class="button is-primary is-rounded">UAV-Lab</a>
