--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <th>Affiliation</th>
     </tr>
     <tr>
-      <td><strong>Kostas Alexis</strong></td>
+      <td>Kostas Alexis</td>
       <td>Professor</td>
       <td>ITK, IE, Autonomous Robots Lab</td>
     </tr>
