--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   </table>
   
 
-  <h2 class="title is-4">Abstract</h2>
+  <h2 class="title is-4">Research in Embodied Artificial Intelligence</h2>
   <p>
-    Embodied AI is a scientific paradigm that seeks to understand and engineer intelligence as a product of the dynamic interplay between a physical body, its environment, and its computational control and learning systems. Unlike disembodied approaches to AI, Embodied AI emphasizes that intelligence arises through physical interaction with the world—mediated by morphology, perception, control, and learning—and must be studied and designed as an integrated whole.
+    Embodied AI is the scientific paradigm that seeks to understand and engineer intelligence as a product of the dynamic interplay between a physical body, its environment, and its computational control and learning systems. Unlike disembodied approaches to AI, Embodied AI emphasizes that intelligence arises through physical interaction with the world (mediated by morphology, perception, control, and learning) and must be studied and designed as an integrated whole. Accordingly, embodied AI is the next step to facilitate the cambrian explosion necessary both in robot embodiments and their intelligence toward ubiquitous autonomous machines that operate, perceive, reason, and act seamlessly around us including in the most extreme ennvironments.
   </p>
 
   <div class="section has-text-centered">
@@ -86,7 +86,7 @@
   </div>
   
 
-  <h2 class="title is-4">Video Playlist</h2>
+  <h2 class="title is-4">Indicative Results</h2>
   <div class="has-text-centered">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLu70ME0whad--Q9Ek1wkJyEJsDL7TgRUg" frameborder="0" allowfullscreen></iframe>
   </div>
