--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <th>Affiliation</th>
     </tr>
     <tr>
-      <td>Kostas Alexis</td>
-      <td>Professor</td>
-      <td>ITK, IE, Autonomous Robots Lab</td>
+      <tr><td><em>Kostas Alexis</em></td><td><em>Professor</em></td><td><em>ITK, IE, Autonomous Robots Lab</em></td></tr>
     </tr>
   </table>
   
