--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       <th>Position</th>
       <th>Affiliation</th>
     </tr>
-    <tr><td><em>Kristin Y. Pettersen</em></td><td><em>Professor</em></td><td><em>ITK, IE, Snake Robotics Lab</em></td></tr>
-    <tr><td><em>Tor Arne Johansen</em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab, SmallSat</em></td></tr>
-    <tr><td><em>Thor I. Fossen</em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
-    <tr><td><em>Annette Stahl</em></td><td><em>Professor</em></td><td><em>ITK, IE, Robotic Vision Group</em></td></tr>
-    <tr><td><em>Jan Tommy Gravdahl</em></td><td><em>Professor</em></td><td><em>ITK, IE, SmallSat</em></td></tr>
-    <tr><td><em>Torleiv Håland Bryne</em></td><td><em>Assoc. Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
+    <tr><td><em><a href="https://kyp.folk.ntnu.no/">Kristin Y. Pettersen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, Snake Robotics, <a href="https://www.ntnu.edu/creme">ERC-Creme</a></em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/tor.arne.johansen">Tor Arne Johansen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab, SmallSat</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/thor.fossen">Thor I. Fossen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/annette.stahl">Annette Stahl</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, Robotic Vision Group</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/jan.tommy.gravdahl">Jan Tommy Gravdahl</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, SmallSat, Snake Robotics</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/torleiv.h.bryne">Torleiv Håland Bryne</a></em></td><td><em>Assoc. Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
   </table>
   
 
@@ -74,9 +74,6 @@
     </span>
     <span class="link-block">
       <a href="https://www.itk.ntnu.no/english/lab/unmanned" class="button is-primary is-rounded">UAV-Lab</a>
-    </span>
-    <span class="link-block">
-      <a href="https://robotnor.no/expertise/lab-facilities/snake-robotics-lab/" class="button is-warning is-rounded">Snake Lab</a>
     </span>
     <span class="link-block">
       <a href="https://www.ntnu.edu/smallsat" class="button is-danger is-rounded">SmallSat Lab</a>
