--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h1 class="title is-3 has-text-centered">NTNU IE ToppForsk Group on Embodied AI</h1>
 
   <div class="has-text-centered" style="margin-bottom: 2em;">
-    <img src="assets/img/eai-image.png" alt="Architecture" style="width: 100%; max-width: 600px; height: auto;">
+    <img src="assets/img/eai-image.png" alt="Architecture" style="width: 100%; max-width: 725px; height: auto;">
   </div>
 
   <h2 class="title is-4">Leadership</h2>
@@ -38,7 +38,7 @@
       <th>Affiliation</th>
     </tr>
     <tr>
-      <tr><td><em>Kostas Alexis</em></td><td><em>Professor</em></td><td><em>ITK, IE, Autonomous Robots Lab</em></td></tr>
+      <tr><td><em><a href="https://www.ntnu.no/ansatte/konstantinos.alexis">Kostas Alexis</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, <a href="https://www.autonomousrobotslab.com/">Autonomous Robots Lab</a>, <a href="https://www.itk.ntnu.no/english/lab/unmanned">UAV-Lab</a></em></td></tr>
     </tr>
   </table>
   
@@ -55,11 +55,11 @@
       <th>Affiliation</th>
     </tr>
     <tr><td><em><a href="https://kyp.folk.ntnu.no/">Kristin Y. Pettersen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, Snake Robotics, <a href="https://www.ntnu.edu/creme">ERC-Creme</a></em></td></tr>
-    <tr><td><em><a href="https://www.ntnu.no/ansatte/tor.arne.johansen">Tor Arne Johansen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab, SmallSat</em></td></tr>
-    <tr><td><em><a href="https://www.ntnu.no/ansatte/thor.fossen">Thor I. Fossen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/tor.arne.johansen">Tor Arne Johansen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, <a href="https://www.itk.ntnu.no/english/lab/unmanned">UAV-Lab</a>, <a href="https://www.ntnu.edu/smallsat">SmallSat</a></em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/thor.fossen">Thor I. Fossen</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, <a href="https://www.itk.ntnu.no/english/lab/unmanned">UAV-Lab</a></em></td></tr>
     <tr><td><em><a href="https://www.ntnu.no/ansatte/annette.stahl">Annette Stahl</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, Robotic Vision Group</em></td></tr>
-    <tr><td><em><a href="https://www.ntnu.no/ansatte/jan.tommy.gravdahl">Jan Tommy Gravdahl</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, SmallSat, Snake Robotics</em></td></tr>
-    <tr><td><em><a href="https://www.ntnu.no/ansatte/torleiv.h.bryne">Torleiv Håland Bryne</a></em></td><td><em>Assoc. Professor</em></td><td><em>ITK, IE, UAV-Lab</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/jan.tommy.gravdahl">Jan Tommy Gravdahl</a></em></td><td><em>Professor</em></td><td><em>ITK, IE, <a href="https://www.ntnu.edu/smallsat">SmallSat</a>, Snake Robotics</em></td></tr>
+    <tr><td><em><a href="https://www.ntnu.no/ansatte/torleiv.h.bryne">Torleiv Håland Bryne</a></em></td><td><em>Assoc. Professor</em></td><td><em>ITK, IE, <a href="https://www.itk.ntnu.no/english/lab/unmanned">UAV-Lab</a></em></td></tr>
   </table>
   
 
